k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-processing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      role: image-processing-service
  template:
    metadata:
      labels:
        role: image-processing-service
    spec:
      containers:
        - name: image-processing-service
          image: docker.io/romaicus/image-processing-service:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 1Gi
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: http
              path: /actuator/health/liveness
            initialDelaySeconds: 20
            failureThreshold: 20
            periodSeconds: 1
          readinessProbe:
            httpGet:
              port: http
              path: /actuator/health/readiness
            initialDelaySeconds: 30
            failureThreshold: 2
            periodSeconds: 1
          volumeMounts:
            - mountPath: /etc/config
              name: config
      volumes:
        - name: config
          configMap:
            name: config
---
apiVersion: v1
kind: Service
metadata:
  name: image-processing-service
spec:
  type: ClusterIP
  selector:
    role: image-processing-service
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-processing-service-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: image-processing-service
      port:
        number: 80
  rules:
    - host: image-processing-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: image-processing-service
                port:
                  number: 80
